--- a/src/package.json
+++ b/src/package.json
@@ -29,7 +29,7 @@
     "start": "ng serve",
     "build": "ng build --base-href ./",
     "build-prod": "ng build --prod=true --base-href ./",
-    "test": "ng test",
+    "test": "ng test --single-run true",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "start:electron": "ng build --base-href ./ && electron .",
