--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,28 @@
 language: node_js
 node_js:
   - lts/*
+
+# Set DISPLAY for Xvfb
+env:
+  - DISPLAY=:99.0
+
+# Use APT Addon to install Chrome
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+
+# Start Xvfb so you can run headless Chrome
 before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
   - cd src
+  - sh -e /etc/init.d/xvfb start
+
+# Install packages
+install:
+  - npm install
+
+# Run tests in continuous integration mode
+script:
+  - ng test --watch=false
